[project]
name = "esgf-core-utils"
version = "1.0.6"
description = "Common library and models for the ESGF core architecture"
readme = "README.rst"
authors = [
    {"name" = "David Poulter", "email" = "david.poulter@stfc.ac.uk"},
    {"name" = "Rhys Evans", "email" = "rhys.r.evans@stfc.ac.uk"},
    {"name" = "Ed Borthwick", "email" = "ed.borthwick@stfc.ac.uk"},
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings>=2.6.1",
    "stac-pydantic>=3.1.1",
    "jinja2>=3.1.6",
    "stac-fastapi.extensions>=6.0.0",
    "fastapi>=0.114.0",
    "confluent-kafka>=2.6.0",
]

[dependency-groups]
black = ["black>=24.4.2", "pre-commit>=3.7.1"]
mypy = ["mypy>=1.10.1", "pre-commit>=3.7.1"]
bandit = ["bandit>=1.7.9", "pre-commit>=3.7.1"]
ruff = ["ruff>=0.5.2", "pre-commit>=3.7.1"]
isort = ["isort>=5.13.2", "pre-commit>=3.7.1"]
xenon = ["xenon>=0.9.1", "pre-commit>=3.7.1"]
test = ["coverage[toml]>=7.6.0"]
docs = ["sphinx>=7.4.7", "sphinx-autoapi>=3.2.1", "sphinx-pydantic>=0.1.1", "sphinx-rtd-theme>=2.0.0", "sphinx-mdinclude>=0.6.2"]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
strict = true
ignore_missing_imports = true
python_version = "3.12"
exclude = [
    "^use/",
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312", "py313","py314"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.xenon]
max-absolute = "A"
max-modules = "A"
max-average = "A"
exclude = [
    "use/*",
]


[tool.bandit]
skips = []

[tool.quality.audit]
ignore-code = ["CVE-2019-8341"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
